misc/portainer-ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: portainer
  namespace: portainer
spec:
  rules:
  - host: portainer.k8s.rsletten.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
  tls:
  - hosts:
    - portainer.k8s.rsletten.com
    secretName: portainer-cert
